fix: improve text readability

--- a/themes/changani/source/css/partials/_post.scss
+++ b/themes/changani/source/css/partials/_post.scss
@@ -51,6 +51,7 @@
   pre,
   pre[data-language],
   blockquote {
+    line-height: 2;
     margin-top: 30px;
     margin-bottom: 30px;
   }
